--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -1,7 +1,9 @@
 ---
-title: "Portfolio item number 2"
-excerpt: "Short description of portfolio item number 2 <br/><img src='/images/500x300.png'>"
+title: "Leveraging SAT Instance Structure to Enhance CDCL Solver Performance"
+excerpt: "Developed and implemented a novel learnt clause deletion scheme for CDCL SAT solvers based on the properties of industrial SAT instances. <br/><img src='/images/sat1.png' width='450' height='280'>"
 collection: portfolio
 ---
 
-This is an item in your portfolio. It can be have images or nice text. If you name the file .md, it will be parsed as markdown. If you name the file .html, it will be parsed as HTML. 
+- Developed a novel clause quality measure leveraging the structural properties of SAT formulas.
+- Utilized tools and libraries like Gephi and Graphviz to visualize and analyze graphs from SAT formulas and created a tool to extract advanced features.
+- Integrated innovative heuristics into advanced SAT solvers, enhancing performance
