--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -4,6 +4,8 @@ excerpt: "Developed and implemented a novel learnt clause deletion scheme for CD
 collection: portfolio
 ---
 
-- Developed a novel clause quality measure leveraging the structural properties of SAT formulas.
-- Utilized tools and libraries like Gephi and Graphviz to visualize and analyze graphs from SAT formulas and created a tool to extract advanced features.
-- Integrated innovative heuristics into advanced SAT solvers, enhancing performance
+<ul>
+<li> Developed a novel clause quality measure leveraging the structural properties of SAT formulas.<\li>
+<li> Utilized tools and libraries like Gephi and Graphviz to visualize and analyze graphs from SAT formulas and created a tool to extract advanced features.<\li>
+<li> Integrated innovative heuristics into advanced SAT solvers, enhancing performance. <\li>
+</ul>
