--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -5,7 +5,7 @@ collection: portfolio
 ---
 
 <ul>
-<li> Developed a novel clause quality measure leveraging the structural properties of SAT formulas.<\li>
-<li> Utilized tools and libraries like Gephi and Graphviz to visualize and analyze graphs from SAT formulas and created a tool to extract advanced features.<\li>
-<li> Integrated innovative heuristics into advanced SAT solvers, enhancing performance. <\li>
+<li> Developed a novel clause quality measure leveraging the structural properties of SAT formulas.
+<li> Utilized tools and libraries like Gephi and Graphviz to visualize and analyze graphs from SAT formulas and created a tool to extract advanced features.
+<li> Integrated innovative heuristics into advanced SAT solvers, enhancing performance. 
 </ul>
